added plural chenges webapp and blog

--- a/webapp/static/webapp/css/style.css
+++ b/webapp/static/webapp/css/style.css
@@ -90,7 +90,7 @@ html {
   color: #7b7b7b; }
 
 .font-gray-9 {
-  color: #636363 #4d4d4d; }
+  border-color: #636363 #4d4d4d; }
 
 .font-gray-10 {
   color: #353535; }
