--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -4,20 +4,20 @@
     {% block content %}
 
     <div class="ftco-blocks-cover-1">
-      <div class="ftco-cover-1 overlay" style="background-image: url('../../static/webapp/images/hero_1.jpg')">
+      <div class="ftco-cover-1 overlay" style="background-image: url({{ main_car.photo.url }}">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-5">
               <div class="feature-car-rent-box-1">
-                <h3>Range Rover S7</h3>
+                <h3>{{ main_car.title }}</h3>
                 <ul class="list-unstyled">
                   <li>
                     <span>Doors</span>
-                    <span class="spec">4</span>
+                    <span class="spec">{{ main_car.dor_num }}</span>
                   </li>
                   <li>
                     <span>Seats</span>
-                    <span class="spec">6</span>
+                    <span class="spec">{{ main_car.seat_num }}</span>
                   </li>
                   <li>
                     <span>Lugage</span>
@@ -25,15 +25,15 @@
                   </li>
                   <li>
                     <span>Transmission</span>
-                    <span class="spec">Automatic</span>
+                    <span class="spec">{{ main_car.transmission.title }}</span>
                   </li>
                   <li>
                     <span>Minium age</span>
-                    <span class="spec">Automatic</span>
+                    <span class="spec">18</span>
                   </li>
                 </ul>
                 <div class="d-flex align-items-center bg-light p-3">
-                  <span>$150/day</span>
+                  <span>${{ main_car.price }}/day</span>
                   <a href="contact.html" class="ml-auto btn btn-primary">Rent Now</a>
                 </div>
               </div>
@@ -109,7 +109,7 @@
                 <a href="#"><img src="{{ car.photo.url }}" alt="Image" class="img-fluid"></a>
                 <div class="item-1-contents">
                   <div class="text-center">
-                  <h3><a href="#">Range Rover S64 Coupe</a></h3>
+                  <h3><a href="#">{{ car.title }}</a></h3>
                   <div class="rating">
                     <span class="icon-star text-warning"></span>
                     <span class="icon-star text-warning"></span>
@@ -190,7 +190,7 @@
       </div>
     </div>
 
-    <div class="site-section section-3" style="background-image: url('../../static/webapp/images/hero_2.jpg');">
+    <div class="site-section section-3" style="background-image: url('../../static/webapp/images/family-car.jpg');">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mb-5">
