--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -110,13 +110,14 @@
                 <div class="item-1-contents">
                   <div class="text-center">
                   <h3><a href="#">{{ car.title }}</a></h3>
-                  <div class="rating">
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                  </div>
+                   {% for i in '12345' %}
+                        {% if forloop.counter <= car.rating %}
+                            <span class="icon-star text-warning"></span>
+                        {% else %}
+                            <span class="icon-star text-light"></span>
+                        {% endif %}
+                   {% endfor %}
+
                   <div class="rent-price"><span>{{ car.price }}/</span>day</div>
                   </div>
                   <ul class="specs">
