--- a/webapp/templates/webapp/cars.html
+++ b/webapp/templates/webapp/cars.html
@@ -1,126 +1,119 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-    {% block content %}
-        <div class="ftco-blocks-cover-1">
-      <div class="ftco-cover-1 overlay innerpage" style="background-image: url('../../static/webapp/images/hero_2.jpg')">
-        <div class="container">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-lg-6 text-center">
-              <h1>Our For Rent Cars</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+{% block content %}
+
+    <div class="ftco-blocks-cover-1">
+        <div class="ftco-cover-1 overlay innerpage"
+             style="background-image: url('../../static/webapp/images/silver-color-bmw.jpg')">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-lg-6 text-center">
+                        <h1>Our For Rent Cars</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
 
     <div class="site-section bg-light">
-      <div class="container">
-        <div class="row" id = "car-list">
+        <div class="container">
+            <div class="row" id="my-heading">
+                {% for car in page_objs %}
 
-            {% for car in cars %}
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="item-1">
-                <a href="#"><img src="{{ car.photo.url }}" alt="Image" class="img-fluid"></a>
-                <div class="item-1-contents">
-                  <div class="text-center">
-                  <h3><a href="#">{{ car.title }}</a></h3>
-                  <div class="rating">
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                    <span class="icon-star text-warning"></span>
-                  </div>
-                  <div class="rent-price"><span>${{ car.price }}/</span>day</div>
-                  </div>
-                  <ul class="specs">
-                    <li>
-                      <span>Doors</span>
-                      <span class="spec">{{ car.dor_num }}</span>
-                    </li>
-                    <li>
-                      <span>Seats</span>
-                      <span class="spec">{{ car.seat_num }}</span>
-                    </li>
-                    <li>
-                      <span>Transmission</span>
-                      <span class="spec">{{ car.transmission.title }}</span>
-                    </li>
-                    <li>
-                      <span>Minium age</span>
-                      <span class="spec">18 years</span>
-                    </li>
-                  </ul>
-                  <div class="d-flex action">
-                    <a href="contact.html" class="btn btn-primary">Rent Now</a>
-                  </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="item-1">
+                            <a href="#"><img src="{{ car.photo.url }}" alt="Image" class="img-fluid"></a>
+                            <div class="item-1-contents">
+                                <div class="text-center">
+                                    <h3><a href="#">{{ car.title }}</a></h3>
+                                    <div class="rating">
+                                        {% for i in '12345' %}
+                                            {% if forloop.counter <= car.rating %}
+                                                <span class="icon-star text-warning"></span>
+                                            {% else %}
+                                                <span class="icon-star text-light"></span>
+                                            {% endif %}
+                                        {% endfor %}
+
+                                    </div>
+                                    <div class="rent-price"><span>${{ car.price }}/</span>day</div>
+                                </div>
+                                <ul class="specs">
+                                    <li>
+                                        <span>Doors</span>
+                                        <span class="spec">{{ car.door_num }}</span>
+                                    </li>
+                                    <li>
+                                        <span>Seats</span>
+                                        <span class="spec">{{ car.seat_num }}</span>
+                                    </li>
+                                    <li>
+                                        <span>Transmission</span>
+                                        <span class="spec">{{ car.transmission.title }}</span>
+                                    </li>
+                                    <li>
+                                        <span>Minium age</span>
+                                        <span class="spec">18 years</span>
+                                    </li>
+                                </ul>
+                                <div class="d-flex action">
+                                    <a href="{% url 'webapp:car_detail' car.pk %}" class="btn btn-primary">Learn more..</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+
+
+                <div class="col-12">
+                    {% for page in page_objs.paginator.page_range %}
+
+                        {% if page == page_objs.number %}
+                            <a href="?page={{ page }}#my-heading" class="p-3" style="color:black">{{ page }}</a>
+                        {% else %}
+                            <a href="?page={{ page }}#my-heading" class="p-3">{{ page }}</a>
+                        {% endif %}
+
+                    {% endfor %}
                 </div>
-              </div>
-          </div>
-            {% endfor %}
 
-        <!-- pagination -->
-            <div class="col-12">
 
-		        {% if cars.has_other_pages %}
-            <div class="pagination">
-                {% if cars.has_previous %}
-                <a href="?page={{ cars.previous_page_number }}#car-list">Back</a>
-            {% endif %}
-            {% for i in cars.paginator.page_range %}
-                {% if cars.number == i %}
-                    <span class="page current-page" style="margin: 0 5px;">{{ i }}</span>
-                {% elif i > cars.number|add:'-3' and i < cars.number|add:'3' %}
-                    <a href="?page={{ i }}#car-list" class="page" style="margin: 0 5px;">{{ i }}</a>
-                {% endif %}
-            {% endfor %}
-            {% if cars.has_next %}
-                <a href="?page={{ cars.next_page_number }}#car-list">Next</a>
-                {% endif %}
-            </div>
-          {% endif %}
-    {#          <div class="col-12">#}
-    {#            <span class="p-3">1</span>#}
-    {#            <a href="#" class="p-3">2</a>#}
-    {#            <a href="#" class="p-3">3</a>#}
-    {#            <a href="#" class="p-3">4</a>#}
-    {#          </div>#}
             </div>
         </div>
-      </div>
     </div>
 
     <div class="container site-section mb-5">
-      <div class="row justify-content-center text-center">
-        <div class="col-7 text-center mb-5">
-          <h2>How it works</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo assumenda, dolorum necessitatibus eius earum voluptates sed!</p>
+        <div class="row justify-content-center text-center">
+            <div class="col-7 text-center mb-5">
+                <h2>How it works</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo assumenda, dolorum necessitatibus eius
+                    earum voluptates sed!</p>
+            </div>
         </div>
-      </div>
-      <div class="how-it-works d-flex">
-        <div class="step">
-          <span class="number"><span>01</span></span>
-          <span class="caption">Time &amp; Place</span>
-        </div>
-        <div class="step">
-          <span class="number"><span>02</span></span>
-          <span class="caption">Car</span>
-        </div>
-        <div class="step">
-          <span class="number"><span>03</span></span>
-          <span class="caption">Details</span>
-        </div>
-        <div class="step">
-          <span class="number"><span>04</span></span>
-          <span class="caption">Checkout</span>
-        </div>
-        <div class="step">
-          <span class="number"><span>05</span></span>
-          <span class="caption">Done</span>
-        </div>
+        <div class="how-it-works d-flex">
+            <div class="step">
+                <span class="number"><span>01</span></span>
+                <span class="caption">Time &amp; Place</span>
+            </div>
+            <div class="step">
+                <span class="number"><span>02</span></span>
+                <span class="caption">Car</span>
+            </div>
+            <div class="step">
+                <span class="number"><span>03</span></span>
+                <span class="caption">Details</span>
+            </div>
+            <div class="step">
+                <span class="number"><span>04</span></span>
+                <span class="caption">Checkout</span>
+            </div>
+            <div class="step">
+                <span class="number"><span>05</span></span>
+                <span class="caption">Done</span>
+            </div>
 
-      </div>
+        </div>
     </div>
-    {% endblock %}
+{% endblock %}
