--- a/webapp/templates/webapp/contact.html
+++ b/webapp/templates/webapp/contact.html
@@ -60,9 +60,9 @@
               <ul class="list-unstyled footer-link">
                 <li class="d-block mb-3">
                   <span class="d-block text-black">Address:</span>
-                  <span>34 Street Name, City Name Here, United States</span></li>
-                <li class="d-block mb-3"><span class="d-block text-black">Phone:</span><span>+1 242 4942 290</span></li>
-                <li class="d-block mb-3"><span class="d-block text-black">Email:</span><span>info@yourdomain.com</span></li>
+                  <span>The Planet Earth</span></li>
+                <li class="d-block mb-3"><span class="d-block text-black">Phone:</span><span>+375336111777</span></li>
+                <li class="d-block mb-3"><span class="d-block text-black">Email:</span><span>tumashenkaaliaksandr@gmail.com</span></li>
               </ul>
             </div>
           </div>
