--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -139,7 +139,7 @@
                     </li>
                   </ul>
                   <div class="d-flex action">
-                    <a href="contact.html" class="btn btn-primary">Rent Now</a>
+                    <a href="{% url 'webapp:car_detail' car.pk %}" class="btn btn-primary">Learn more..</a>
                   </div>
                 </div>
               </div>
